// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TeamSection > renders desktop as expected 1`] = `
<div>
  <section
    class="section section-body team-section team-section--desktop !border-b-0"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative"
        >
          Our team
        </h2>
      </div>
    </div>
    <div
      class="section__body"
    >
      <div
        class="team__grid flex flex-row flex-wrap mx-auto gap-x-space-between gap-y-12"
      >
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Dewi Erwan"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/dewi.jpg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Dewi Erwan
              </p>
              <p
                class="card__subtitle "
              >
                Co-founder & CEO
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://www.linkedin.com/in/dewierwan/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Will Saunter"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/will.jpg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Will Saunter
              </p>
              <p
                class="card__subtitle "
              >
                Co-founder
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://linkedin.com/in/will-saunter"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Li-Lian Ang"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/lilian.jpg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Li-Lian Ang
              </p>
              <p
                class="card__subtitle "
              >
                Product
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://linkedin.com/in/anglilian"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Viorica Gheorghita"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/vio.jpg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Viorica Gheorghita
              </p>
              <p
                class="card__subtitle "
              >
                Product
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://www.linkedin.com/in/vioricagheorghita/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Adam Jones"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/adam.jpg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Adam Jones
              </p>
              <p
                class="card__subtitle "
              >
                AI Safety
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://www.linkedin.com/in/domdomegg/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Josh Landes"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/josh_v2.jpeg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Josh Landes
              </p>
              <p
                class="card__subtitle "
              >
                Community Manager
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://linkedin.com/in/josh-landes12"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
        <div
          class="card flex flex-col items-start transition-transform duration-200 team-section__card"
        >
          <div
            class="card__image-container w-full mb-4"
          >
            <img
              alt="Tarin Rickett"
              class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
              src="/images/team/tarin.jpg"
            />
          </div>
          <div
            class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
          >
            <div
              class="card__text"
            >
              <p
                class="card__title subtitle-sm mb-2"
              >
                Tarin Rickett
              </p>
              <p
                class="card__subtitle "
              >
                Engineering
              </p>
            </div>
            <div
              class="card__bottom-section flex flex-col gap-space-between"
            >
              <a
                class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                data-testid="cta-link"
                href="https://linkedin.com/in/tarinrickett/"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="cta-button__text"
                >
                  LinkedIn
                </span>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`TeamSection > renders mobile as expected 1`] = `
<div>
  <div
    class="slide-list w-full flex flex-col team-section team-section--mobile section-body !border-b-0"
  >
    <div
      class="section-heading__title-container flex justify-between items-center gap-space-between mb-6"
    >
      <div
        class="section-heading__content flex-1 flex flex-col gap-2"
      >
        <h2
          class="section-heading__title relative"
        >
          Our team
        </h2>
      </div>
      <div
        class="slide-list__nav--header items-center gap-2 ml-auto mt-auto flex"
      >
        <button
          aria-label="Previous slide"
          class="slide-list__nav-button p-3 border rounded-lg transition-colors border-charcoal-light text-black hover:bg-gray-50 active:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-hidden focus:ring-2 focus:ring-bluedot-light"
          disabled=""
          type="button"
        >
          <svg
            class="slide-list__nav-icon size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M15 19l-7-7 7-7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
        <button
          aria-label="Next slide"
          class="slide-list__nav-button p-3 border rounded-lg transition-colors border-charcoal-light text-black hover:bg-gray-50 active:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-hidden focus:ring-2 focus:ring-bluedot-light"
          type="button"
        >
          <svg
            class="slide-list__nav-icon size-5"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="slide-list__content flex flex-col lg:flex-row gap-space-between items-stretch"
    >
      <div
        class="slide-list__container relative overflow-hidden flex-1 flex flex-col gap-space-between"
      >
        <div
          class="slide-list__nav--container items-center justify-end gap-2 hidden"
        >
          <button
            aria-label="Previous slide"
            class="slide-list__nav-button p-3 border rounded-lg transition-colors border-charcoal-light text-black hover:bg-gray-50 active:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-hidden focus:ring-2 focus:ring-bluedot-light"
            disabled=""
            type="button"
          >
            <svg
              class="slide-list__nav-icon size-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M15 19l-7-7 7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
          <button
            aria-label="Next slide"
            class="slide-list__nav-button p-3 border rounded-lg transition-colors border-charcoal-light text-black hover:bg-gray-50 active:bg-gray-100 disabled:opacity-50 disabled:cursor-not-allowed focus:outline-hidden focus:ring-2 focus:ring-bluedot-light"
            type="button"
          >
            <svg
              class="slide-list__nav-icon size-5"
              fill="none"
              stroke="currentColor"
              viewBox="0 0 24 24"
            >
              <path
                d="M9 5l7 7-7 7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
              />
            </svg>
          </button>
        </div>
        <div
          class="slide-list__gradient-overlay absolute inset-0 pointer-events-none z-10 flex"
        >
          <div
            class="slide-list__gradient-right absolute inset-y-0 right-0 w-8 bg-linear-to-l from-cream-normal to-transparent opacity-50"
          />
        </div>
        <div
          class="slide-list__slides flex overflow-x-scroll scrollbar-hidden transition-transform duration-300 gap-space-between snap-x snap-mandatory"
          style="scroll-padding-inline: 0px;"
        >
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Dewi Erwan"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/dewi.jpg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Dewi Erwan
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    Co-founder & CEO
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://www.linkedin.com/in/dewierwan/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Will Saunter"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/will.jpg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Will Saunter
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    Co-founder
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://linkedin.com/in/will-saunter"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Li-Lian Ang"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/lilian.jpg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Li-Lian Ang
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    Product
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://linkedin.com/in/anglilian"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Viorica Gheorghita"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/vio.jpg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Viorica Gheorghita
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    Product
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://www.linkedin.com/in/vioricagheorghita/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Adam Jones"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/adam.jpg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Adam Jones
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    AI Safety
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://www.linkedin.com/in/domdomegg/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Josh Landes"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/josh_v2.jpeg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Josh Landes
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    Community Manager
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://linkedin.com/in/josh-landes12"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
          <div
            class="slide-list__slide shrink-0 snap-start"
            style="scroll-margin-left: -0px;"
          >
            <div
              class="card flex flex-col items-start transition-transform duration-200 team-section__card"
            >
              <div
                class="card__image-container w-full mb-4"
              >
                <img
                  alt="Tarin Rickett"
                  class="card__image max-w-full max-h-full object-cover rounded-radius-md team-section__card-image h-[300px] w-[300px]"
                  src="/images/team/tarin.jpg"
                />
              </div>
              <div
                class="card__content flex flex-col gap-6 w-full flex-1 justify-between"
              >
                <div
                  class="card__text"
                >
                  <p
                    class="card__title subtitle-sm mb-2"
                  >
                    Tarin Rickett
                  </p>
                  <p
                    class="card__subtitle "
                  >
                    Engineering
                  </p>
                </div>
                <div
                  class="card__bottom-section flex flex-col gap-space-between"
                >
                  <a
                    class="cta-button flex items-center justify-center rounded-radius-sm transition-all duration-200 text-sm px-4 py-3 w-fit font-[650] whitespace-nowrap cta-button--secondary bg-transparent border border-bluedot-normal text-bluedot-normal hover:bg-bluedot-lighter card__cta"
                    data-testid="cta-link"
                    href="https://linkedin.com/in/tarinrickett/"
                    rel="noopener noreferrer"
                    target="_blank"
                  >
                    <span
                      class="cta-button__text"
                    >
                      LinkedIn
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
